Added Special slots for Month View. (#408)
* Apply a fix for the layout of the time ruler for latest versions of windows.

* Return old logic.

* Initial implementation of the special slots for monthview.

* Make Month cell style context for further usage in style selector.

* Initial implementation of the special slots for month.

* Handle selection when cell is read only due to its slot.

* Added content template for the special slots in the multiday view.

* Fix stylecop errors.

* Small code refactoring.

* Small code improvement.

* Various fixes for the Calendar and added example for the special slots in the Month view.

* Remove irrelevant code.

* Set default styles event if there is month view settings.

--- a/Controls/Input/Input.UWP/Themes/DefaultCalendarTimerRulerResources.xaml
+++ b/Controls/Input/Input.UWP/Themes/DefaultCalendarTimerRulerResources.xaml
@@ -70,6 +70,22 @@
         </local:CalendarCellStyle.ContentStyle>
     </local:CalendarCellStyle>
 
+    <local:CalendarCellStyle x:Key="SpecialCellStyle">
+        <local:CalendarCellStyle.DecorationStyle>
+            <Style TargetType="Border">
+                <Setter Property="Background" Value="{StaticResource TelerikSpecialSlotBackground}" />
+            </Style>
+        </local:CalendarCellStyle.DecorationStyle>
+    </local:CalendarCellStyle>
+
+    <local:CalendarCellStyle x:Key="SpecialReadOnlyCellStyle">
+        <local:CalendarCellStyle.DecorationStyle>
+            <Style TargetType="Border">
+                <Setter Property="Background" Value="{StaticResource TelerikSpecialSlotBackgroundReadOnly}" />
+            </Style>
+        </local:CalendarCellStyle.DecorationStyle>
+    </local:CalendarCellStyle>
+
     <local:CalendarCellStyle x:Key="MuldiDayViewNormalCellStyle">
         <local:CalendarCellStyle.ContentStyle>
             <Style TargetType="TextBlock" BasedOn="{StaticResource DefaultNormalCellStyle}">
