--- a/SDKExamples.UWP/Examples/Calendar/MultiDayViewStyling.xaml
+++ b/SDKExamples.UWP/Examples/Calendar/MultiDayViewStyling.xaml
@@ -111,6 +111,16 @@
             <Setter Property="Padding" Value="0, 10 , 0, 0"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
         </Style>
+        <example:CustomSpecialSlotContentTemplateSelector x:Key="CustomSpecialSlotContentTemplateSelector">
+            <example:CustomSpecialSlotContentTemplateSelector.FridayTemplate>
+                <DataTemplate>
+                    <TextBlock Text="Friday! :)"
+                               FontSize="16"
+                               Foreground="DarkBlue"
+                               HorizontalTextAlignment="Center"/>
+                </DataTemplate>
+            </example:CustomSpecialSlotContentTemplateSelector.FridayTemplate>
+        </example:CustomSpecialSlotContentTemplateSelector>
     </local:ExamplePageBase.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -150,6 +160,7 @@
             </input:RadCalendar.HighlightedCellStyle>
             <input:RadCalendar.MultiDayViewSettings>
                 <input:MultiDayViewSettings SpecialSlotsSource="{Binding NonWorkingHours}"
+                                            SpecialSlotContentTemplateSelector="{StaticResource CustomSpecialSlotContentTemplateSelector}"
                                             SpecialSlotStyleSelector="{StaticResource NonWorkingHoursSpecialSlotStyleSelector}"
                                             TimeRulerItemStyleSelector="{StaticResource CalendarTimeRulerItemStyleSelector}"
                                             CurrentTimeIndicatorStyle="{StaticResource CurrentTimeIndicatorStyle}"
